# bolao-brasileirao-fsa

./: .gitignore  README.md
app/: .gitignore  README.md  build.sh  render.yaml
app/backend/: pyproject.toml
app/backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
app/backend/app/routers/: admin.py  apostadores.py  auth.py  historico.py  ranking.py  standings.py  teams.py
app/backend/app/services/: badges_service.py  historico_service.py  ranking_service.py  session_utils.py  sofascore.py  sync_service.py
app/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/frontend/public/: manifest.json  sw.js
app/frontend/src/: App.tsx  index.css  main.tsx
app/frontend/src/api/: client.ts
app/frontend/src/components/: ApostadorForm.tsx  EvolutionChart.tsx  RankingCompact.tsx  RankingTable.tsx  ShareCard.tsx  TeamSelect.tsx
app/frontend/src/contexts/: AuthContext.tsx
app/frontend/src/pages/: Admin.tsx  Apostadores.tsx  Classificacao.tsx  Historico.tsx  Ranking.tsx  Sobre.tsx
app/frontend/src/types/: index.ts
app/frontend/src/utils/: exportExcel.ts  exportPdf.ts  fileTimestamp.ts  importExcel.ts
